--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --reporter spec",
+    "lint": "jshint index.js test"
   },
   "keywords": [
     "image",
     "dimensions"
   ],
   "author": "Eugeny Vlasenko",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^1.9.2",
+    "jshint": "^2.5.6",
+    "mocha": "^1.21.4"
+  }
 }
