--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "get image dimensions by parsing its filename",
   "main": "index.js",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/mahnunchik/parse-image-dimensions.git"
+  },
   "directories": {
     "test": "test"
   },
@@ -14,7 +18,11 @@
     "image",
     "dimensions"
   ],
-  "author": "Eugeny Vlasenko",
+  "author": {
+    "name": "Eugeny Vlasenko",
+    "email": "mahnunchik@gmail.com",
+    "url": "http://mahnunchik.tumblr.com/"
+  },
   "license": "MIT",
   "devDependencies": {
     "chai": "^1.9.2",
